--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -7,6 +7,8 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import SearchBar from "@components/Search";
 import getSortedPosts from "@utils/getSortedPosts";
+import getUniqueTags from "@utils/getUniqueTags";
+import Tag from "@components/Tag.astro";
 
 // Retrieve all published articles
 const posts = await getCollection("blog", ({ data }) => !data.draft);
@@ -19,12 +21,18 @@ const searchList = sortedPosts.map(({ data, slug }) => ({
   data,
   slug,
 }));
+
+// const posts = await getCollection("blog");
+let tags = getUniqueTags(posts);
 ---
 
 <Layout title={`Search | ${SITE.title}`}>
   <Header activeNav="search" />
-  <Main pageTitle="Search" pageDesc="Search any article ...">
+  <Main pageTitle="Search" pageDesc="">
     <SearchBar client:load searchList={searchList} />
+    <ul>
+      {tags.map(({ tag }) => <Tag {tag} size="sm" />)}
+    </ul>
   </Main>
   <Footer />
 </Layout>
