--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,24 +23,6 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <!-- <h1>About Me</h1> -->
-      <!-- <a
-        target="_blank"
-        href="/rss.xml"
-        class="rss-link"
-        aria-label="rss feed"
-        title="RSS Feed"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
-          ><path
-            d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
-          ></path><path
-            d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
-          ></path><circle cx="6" cy="18" r="2"></circle>
-        </svg>
-        <span class="sr-only">RSS Feed</span>
-      </a> -->
-
       <p>
         Full Stack Developer who has mastered the ability to assist family and
         friends with anything remotely related to his field. Now also assumes
@@ -51,7 +33,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         Feel free to
         <LinkButton
           className="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
-          href="/posts/"
+          href="/posts/automated-developer-portfolio/"
         >
           steal this
         </LinkButton>.
