Testing Google Tag Manager: *

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -116,7 +116,7 @@ const socialImageURL = new URL(
     <script
       is:inline
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-13NB457571"></script>
+      src="https://www.googletagmanager.com/gtag/js?id=G-Z4R2NFG7Q7"></script>
     <script is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -124,7 +124,7 @@ const socialImageURL = new URL(
       }
       gtag("js", new Date());
 
-      gtag("config", "G-13NB457571");
+      gtag("config", "G-Z4R2NFG7Q7");
     </script>
   </body>
 </html>
