--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -11,7 +11,7 @@ import getUniqueTags from "@utils/getUniqueTags";
 import Tag from "@components/Tag.astro";
 
 // Retrieve all published articles
-const posts = await getCollection("blog", ({ data }) => !data.draft);
+const posts = await getCollection("posts", ({ data }) => !data.draft);
 const sortedPosts = getSortedPosts(posts);
 
 // List of items to search in
@@ -22,7 +22,7 @@ const searchList = sortedPosts.map(({ data, slug }) => ({
   slug,
 }));
 
-// const posts = await getCollection("blog");
+// const posts = await getCollection("posts");
 let tags = getUniqueTags(posts);
 ---
 
