--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -27,9 +27,9 @@ const { props } = Astro;
           {props.pageTitle[1]}
         </span>
       </h1>
-    ) : (
+    ) : props.pageTitle?.length ? (
       <h1>{props.pageTitle}</h1>
-    )
+    ) : null
   }
   <p>{props.pageDesc}</p>
   <slot />
