--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -15,6 +15,8 @@ export interface Props {
 }
 
 const { currentPage, totalPages, paginatedPosts } = Astro.props;
+
+export const prerender = true;
 ---
 
 <Layout title={`Posts | ${SITE.title}`}>
