--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,13 +12,23 @@
     --color-card-muted: 205, 205, 205;
     --color-border: 236, 233, 233;
   }
-  html[data-theme="dark"] {
+  /* html[data-theme="dark"] {
     --color-fill: 33, 39, 55;
     --color-text-base: 234, 237, 243;
     --color-accent: 255, 107, 1;
     --color-card: 52, 63, 96;
     --color-card-muted: 138, 51, 2;
     --color-border: 171, 75, 8;
+  } */
+  /* GitHub */
+  html[data-theme="dark"] {
+    --color-fill: 13, 17, 22;
+    --color-text-base: 230, 237, 243;
+    --color-accent: 68, 147, 248;
+    --color-card: 63, 75, 90;
+    --color-card-muted: 89, 107, 129;
+    --color-border: 59, 70, 85;
+    --border-color-muted: rgba(48, 54, 61, 0.7);
   }
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
@@ -31,6 +41,11 @@
   body {
     @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
+
+    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; */
+    font-size: 16px;
+    line-height: 1.5;
+    word-wrap: break-word;
   }
   section,
   footer {
@@ -57,17 +72,18 @@
     prose-figcaption:!text-skin-base prose-figcaption:opacity-70
     prose-strong:!text-skin-base
 
-    
     prose-code:rounded prose-code:bg-skin-card 
     prose-code:bg-opacity-75 prose-code:p-1 
     prose-code:before:!content-none prose-code:after:!content-none
     prose-ol:!text-skin-base 
     prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-accent
-    prose-table:text-skin-base prose-th:border
-    prose-th:border-skin-line prose-td:border 
-    prose-td:border-skin-line prose-img:!my-2 
-    prose-img:mx-auto prose-img:border-2 
-    prose-img:border-skin-line prose-hr:!border-skin-line;
+    /* prose-table:text-skin-base prose-th:border */
+    /* prose-th:border-skin-line prose-td:border  */
+    /* prose-td:border-skin-line prose-img:!my-2  */
+    /* prose-img:mx-auto prose-img:border-2  */
+    /* prose-img:border-skin-line prose-hr:!border-skin-line; */
+
+    /* prose-table:text-skin-base */
   }
   .prose a {
     @apply break-words hover:!text-skin-accent;
@@ -122,6 +138,23 @@
 
   pre > code {
     white-space: pre;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 24px;
+    margin-bottom: 16px;
+    font-weight: var(--base-text-weight-semibold, 600);
+    line-height: 1.25;
+  }
+
+  h1 {
+    padding-bottom: .3em;
+    font-size: 2em;
+    border-bottom: 1px solid rgba(48, 54, 61, 0.7);
+  }
+
+  .body>*:first-child>.heading-element:first-child {
+    margin-top: 0 !important;
   }
 }
 
