--- a/src/pages/gallery/index.astro
+++ b/src/pages/gallery/index.astro
@@ -9,7 +9,6 @@ import Collections from "@components/gallery/Collections.svelte";
 <Layout title={`Gallery | ${SITE.title}`}>
   <Header activeNav="gallery" />
   <Main>
-    <!-- <Collections client:load /> -->
-    <Collections />
+    <Collections client:load />
   </Main>
 </Layout>
