--- a/src/layouts/Projects.astro
+++ b/src/layouts/Projects.astro
@@ -11,7 +11,7 @@ import { SITE } from "@config";
 export interface Props {
   currentPage: number;
   totalPages: number;
-  paginatedPosts: CollectionEntry<"posts">[];
+  paginatedPosts: CollectionEntry<"projects">[];
 }
 
 const { currentPage, totalPages, paginatedPosts } = Astro.props;
@@ -20,12 +20,12 @@ export const prerender = true;
 ---
 
 <Layout title={`Posts | ${SITE.title}`}>
-  <Header activeNav="posts" />
+  <Header activeNav="projects" />
   <Main>
     <ul>
       {
         paginatedPosts.map(({ data, slug }) => (
-          <Card href={`/posts/${slug}/`} frontmatter={data} />
+          <Card href={`/projects/${slug}/`} frontmatter={data} />
         ))
       }
     </ul>
@@ -34,8 +34,8 @@ export const prerender = true;
   <Pagination
     {currentPage}
     {totalPages}
-    prevUrl={`/posts/${currentPage - 1 !== 1 ? "/" + (currentPage - 1) : ""}/`}
-    nextUrl={`/posts/${currentPage + 1}/`}
+    prevUrl={`/projects/${currentPage - 1 !== 1 ? "/" + (currentPage - 1) : ""}/`}
+    nextUrl={`/projects/${currentPage + 1}/`}
   />
 
   <Footer noMarginTop={totalPages > 1} />
