--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,6 +78,26 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     }
 
     {
+      recentPosts.length > 0 && (
+        <section id="recent-posts">
+          <HeaderLink href="/posts/" title="Posts" />
+          <ul>
+            {recentPosts.map(
+              ({ data, slug }, index) =>
+                index < 4 && (
+                  <Card
+                    href={`/posts/${slug}/`}
+                    frontmatter={data}
+                    secHeading={false}
+                  />
+                )
+            )}
+          </ul>
+        </section>
+      )
+    }
+
+    {
       false && featuredPosts.length > 0 && (
         <>
           <section id="featured">
