Added masonry grid

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
 import { SOCIALS } from "@config";
 import RecentPhotos from "@components/gallery/RecentPhotos.svelte";
+import PhotosMasonry from "@components/gallery/PhotosMasonry.svelte";
 
 const posts = await getCollection("posts");
 
