Changed home page

--- a/src/pages/gallery/[...slug].astro
+++ b/src/pages/gallery/[...slug].astro
@@ -14,6 +14,7 @@ export async function getStaticPaths() {
     { params: { slug: "QLfo7DmU-vY" } },
     { params: { slug: "KObrLBFgMHA" } },
     { params: { slug: "lUYWpP6x1_E" } },
+    { params: { slug: "Uwl5F6yZ4Dc" } },
   ];
 }
 
