--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <Hr />
     <section id="gallery">
       <h2>Recent potos</h2>
-      <RecentPhotos client:load />
+      <PhotosMasonry client:load />
     </section>
 
     <div class="all-posts-btn-wrapper">
